// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MoodItem renders filled button 1`] = `
.emotion-0 {
  width: 25px;
  height: 25px;
  border: 1px solid;
  display: inline-block;
  border-radius: 15px;
  line-height: 25px;
  text-align: center;
  margin: 5px;
  vertical-align: bottom;
  border-color: #372d21;
  background-color: #372d21;
  color: gray;
}

<button
  className="emotion-0"
  onClick={[MockFunction]}
/>
`;

exports[`MoodItem renders filled button 2 1`] = `
.emotion-0 {
  width: 25px;
  height: 25px;
  border: 1px solid;
  display: inline-block;
  border-radius: 15px;
  line-height: 25px;
  text-align: center;
  margin: 5px;
  vertical-align: bottom;
  border-color: #a8d765;
  background-color: #a8d765;
  color: gray;
}

<button
  className="emotion-0"
  onClick={[MockFunction]}
/>
`;

exports[`MoodItem renders not filled button 1`] = `
.emotion-0 {
  width: 25px;
  height: 25px;
  border: 1px solid;
  display: inline-block;
  border-radius: 15px;
  line-height: 25px;
  text-align: center;
  margin: 5px;
  vertical-align: bottom;
  border-color: black;
}

<button
  className="emotion-0"
  onClick={[MockFunction]}
/>
`;

exports[`MoodItem renders not filled button 2 1`] = `
.emotion-0 {
  width: 25px;
  height: 25px;
  border: 1px solid;
  display: inline-block;
  border-radius: 15px;
  line-height: 25px;
  text-align: center;
  margin: 5px;
  vertical-align: bottom;
  border-color: black;
}

<button
  className="emotion-0"
  onClick={[MockFunction]}
/>
`;
